src/objects/User_Center_Assignment__c.object
<CustomObject>
    <description>Adding this to handle doctors in Hope Rx that work at multiple centers that are not in the same market (business unit). Will use it for all users, but the doctors are the reason for this table being necessary</description>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>User Center Assignments</relationshipLabel>
        <relationshipName>User_Center_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dosespot_User_Id__c</fullName>
        <label>Dosespot User Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Center_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Center Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Docs</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Center_Information__c</columns>
        <columns>Dosespot_User_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/1/2017 12:00 AM</value>
        </filters>
        <label>All Docs</label>
    </listViews>
    <listViews>
        <fullName>HRX_View</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Center_Information__c</columns>
        <filterScope>Everything</filterScope>
        <label>HRX View</label>
    </listViews>
    <nameField>
        <displayFormat>UCA-{0000}</displayFormat>
        <label>User Center Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Center Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>